# SimpleDS3231-Pico

./: .gitignore  CMakeLists.txt  README.md  SimpleDS3231.cpp  simple_ds3231_lib_import.cmake
examples/: CMakeLists.txt  SimpleDS3231Example.cpp  simple_ds3231_lib_import.cmake
examples/src/: SimpleDS3231Example.cpp
include/: SimpleDS3231.h  SimpleDS3231.hpp
internal/: ds3231.h
src/: CMakeLists.txt  SimpleDS3231.cpp
